# sharepoint-sharing-audit

./: .env.example  .gitignore  Invoke-SharingAudit.ps1  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile.collector  Dockerfile.reporter  Dockerfile.webapp
docs/plans/: 2026-02-17-sharepoint-sharing-audit-design.md  2026-02-17-sharepoint-sharing-audit-implementation.md  2026-02-18-sharing-audit-pipeline-design.md  2026-02-18-sharing-audit-pipeline-implementation.md  2026-02-18-sharing-dashboard-webapp-design.md  2026-02-18-sharing-dashboard-webapp-implementation.md  2026-02-23-delta-query-design.md  2026-02-23-delta-query-implementation.md  2026-02-27-unshare-error-reasons-design.md  2026-02-27-unshare-error-reasons-implementation.md
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
helm/sharing-audit/: Chart.yaml  values.yaml
src/collector/: __main__.py  delta.py  graph_client.py  onedrive.py  sharepoint.py
src/reporter/: __main__.py  csv_export.py  pdf_export.py  queries.py
src/shared/: classify.py  config.py  deduplicate.py  neo4j_client.py
src/sharing_audit.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/webapp/: __main__.py  app.py  auth.py  graph_unshare.py  queries.py  routes_auth.py  routes_files.py  routes_unshare.py
tests/: conftest.py
tests/collector/: test_delta.py  test_graph_client.py  test_onedrive.py
tests/reporter/: test_csv_export.py  test_queries.py
tests/shared/: test_classify.py  (+2 more)
(+30 files in other folders)
