[project]
name = "sharing-audit"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "neo4j>=5.0,<6.0",
    "msgraph-sdk>=1.0,<2.0",
    "azure-identity>=1.15,<2.0",
    "jinja2>=3.1,<4.0",
    "weasyprint>=60.0",
    "python-dotenv>=1.0,<2.0",
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "python-jose[cryptography]>=3.3,<4.0",
    "httpx>=0.28,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "testcontainers[neo4j]>=4.0",
    "responses>=0.25",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--import-mode=importlib"
